2012-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/vmlisp.lisp (MAKE-CVEC): Remove.
	(GETSTR): Likewise.
	* interp/sys-macros.lisp (INTERNL): Likewise.
	* interp/macros.lisp: Move content to vmlisp.lisp.  Remove.
	* interp/Makefile.in: Adjust.
	* interp/debug.lisp: Now import sys-macros
	* interp/fname.lisp: Likewise.
	* interp/format.boot: Likewise.
	* interp/g-timer.boot: Likewise.
	* interp/g-util.boot: Likewise.
	* interp/ht-util.boot: Likewise.
	* interp/htcheck.boot: Likewise.
	* interp/htsetvar.boot: Likewise.
	* interp/monitor.lisp: Likewise.
	* interp/newaux.lisp: Likewise.
	* interp/newfort.boot: Likewise.
	* interp/nlib.lisp: Likewise.
	* interp/postpar.boot: Likewise.
	* interp/profile.boot: Likewise.
	* interp/server.boot: Likewise.
	* interp/setvars.boot: Likewise.
	* interp/setvart.boot: Likewise.
	* interp/sfsfun.boot: Likewise.
	* interp/simpbool.boot: Likewise.
	* interp/spad.lisp: Likewise.
	* interp/termrw.boot: Likewise.
	* interp/topics.boot: Likewise.

2012-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/includer.boot (%SourceLine): New datatype.
	(makeSourceLine): New.
	Use source line macro accessors.
	* boot/pile.boot: Likewise.
	* boot/scanner.boot: Likewise.

2012-05-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/br-search.boot: Use findChar and findString in lieu of STRPOS.
	* interp/database.boot: Likewise.
	* interp/format.boot: Likewise.
	* interp/i-funsel.boot: Likewise.
	* interp/i-map.boot: Likewise.
	* interp/match.boot: Likewise.
	* interp/scan.boot: Likewise.
	* interp/trace.boot: Likewise.

2012-05-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/tokens.boot (%Token): New datatype.
	(makeToken): New.
	* boot/includer.boot: Use %token accessors.
	* boot/parser.boot: Likewise.
	* boot/pile.boot: Likewise.
	* boot/scanner.boot: Likewise.
	* boot/utility.boot: Export subString.

2012-05-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/lexing.boot (%Token): Now an actual type defined as a
	record structure.